[package]
authors = ["_@kevinrodriguez.io"]
edition = "2021"
name = "cryptools"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = {version = "4.0.17", features = ["derive"]}
reqwest = {version = "0.11.12", features = ["json"]}
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
spinners = "4.1.0"
tokio = {version = "1.21.2", features = ["full"]}
